--- a/NAPSA/recovered-code/Recolector/Recolector/Recolector.csproj
+++ b/NAPSA/recovered-code/Recolector/Recolector/Recolector.csproj
@@ -68,9 +68,11 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DASYS\NAPSA\Display2\GUI\FrmActivador.cs">
@@ -85,6 +87,12 @@
     <Compile Include="GUI\FrmPanel.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\FrmPanel2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FrmPanel2.Designer.cs">
+      <DependentUpon>FrmPanel2.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Program.cs" />
     <Compile Include="Recolector\Properties\Resources.cs" />
     <Compile Include="Recolector\Properties\Settings.cs" />
@@ -94,7 +102,13 @@
     <EmbeddedResource Include="DASYS\GUI\Mensajero.resx" />
     <EmbeddedResource Include="DASYS\GUI\VisorPopUp.resx" />
     <EmbeddedResource Include="DASYS\NAPSA\Display2\GUI\FrmActivador.resx" />
-    <EmbeddedResource Include="GUI\FrmPanel.resx" />
+    <EmbeddedResource Include="GUI\FrmPanel.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FrmPanel2.resx">
+      <DependentUpon>FrmPanel2.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Recolector\Properties\Resources.resx" />
   </ItemGroup>
   <ItemGroup>
