--- a/NAPSA/recovered-code/Recolector/Recolector/Recolector.csproj
+++ b/NAPSA/recovered-code/Recolector/Recolector/Recolector.csproj
@@ -87,11 +87,8 @@
     <Compile Include="GUI\FrmPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\FrmPanel2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\FrmPanel2.Designer.cs">
-      <DependentUpon>FrmPanel2.cs</DependentUpon>
+    <Compile Include="GUI\FrmPanel.Designer.cs">
+      <DependentUpon>FrmPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Program.cs" />
     <Compile Include="Recolector\Properties\Resources.cs" />
@@ -105,8 +102,8 @@
     <EmbeddedResource Include="GUI\FrmPanel.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\FrmPanel2.resx">
-      <DependentUpon>FrmPanel2.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\FrmPanel.resx">
+      <DependentUpon>FrmPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Recolector\Properties\Resources.resx" />
