Add BLL logic to Recolector 4 Add Demo button and logic

--- a/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
+++ b/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
@@ -103,5 +103,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{98a8ab5b-2db2-4a41-a723-82d5c88dd39c}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DASYS.NAPSA.Recolector4.config.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
