Fix according to Pablo: change coordinates to cylinder center and get blob center coordinates rather than one corner Add read and write Numbers table Finish calibration related controls

--- a/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
+++ b/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
@@ -125,7 +125,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="data.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
