--- a/NAPSA/Recolector4/Recolector/Recolector 3.csproj
+++ b/NAPSA/Recolector4/Recolector/Recolector 3.csproj
@@ -139,8 +139,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DASYS.NAPSA.Recolector.config.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="DASYS.NAPSA.Recolector4.config.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
