Refactor code to make detection more reliable Fix machine state PLACE_YOUR_BETS not waiting for NB

--- a/NAPSA/ejecutables/Collector IV/App.config
+++ b/NAPSA/ejecutables/Collector IV/App.config
@@ -15,6 +15,7 @@
     <add key="BallMinSize" value="8" />
     <add key="BallMaxSize" value="14" />
     <add key="BallRadius" value="50" />
+    <add key="DetectMethod" value="0"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
