--- a/NAPSA/ejecutables/Collector IV/Recolector 4.exe.config
+++ b/NAPSA/ejecutables/Collector IV/Recolector 4.exe.config
@@ -15,6 +15,7 @@
     <add key="BallMinSize" value="8" />
     <add key="BallMaxSize" value="14" />
     <add key="BallRadius" value="50" />
+    <add key="DetectMethod" value="0"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
