--- a/NAPSA/Recolector4/Recolector/Recolector 3.csproj
+++ b/NAPSA/Recolector4/Recolector/Recolector 3.csproj
@@ -96,6 +96,11 @@
       <DependentUpon>FrmPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Program.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Recolector\Properties\Resources.cs" />
     <Compile Include="Recolector\Properties\Settings.cs" />
     <Compile Include="AssemblyInfo.cs" />
@@ -110,6 +115,10 @@
     <EmbeddedResource Include="GUI\FrmPanel.resx">
       <DependentUpon>FrmPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Recolector\Properties\Resources.resx" />
   </ItemGroup>
