Refactor form to save numbers data in CSV Removed cylinder movement requirement for BEFORE_GAME Changed txt field to lbl

--- a/NAPSA/Recolector4/Recolector 4/App.config
+++ b/NAPSA/Recolector4/Recolector 4/App.config
@@ -15,7 +15,7 @@
     <add key="BallMinSize" value="8" />
     <add key="BallMaxSize" value="14" />
     <add key="BallRadius" value="50" />
-    <add key ="ShowText" value="false"/>
+    <add key ="ShowText" value="true"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
