Add Zero coordinates to fix detection ball coordinates Last version in testing

--- a/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
+++ b/NAPSA/Recolector4/Recolector 4/Recolector 4.csproj
@@ -144,6 +144,9 @@
     <None Include="dataXY.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="dataZE.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
